# pelican

./: .editorconfig  .gitignore  .luarc.json  Cargo.toml  LICENSE.md  README.md  build-dcs.bat  build.bat  dcs.lua  log4rs.yaml  main.lua  release.bat  script.js  script.result.txt  test.bat
.github/workflows/: cargo-release.yml  gh-release.yml  rust.yml
dcs/: json-rpc_main.lua  json-rpc_mission.lua  pelican_mission.lua
docs/: README.md  collections.md  index.html  index.md  json.md  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: pelican.jsonrpc.JsonRpcRouter.html  (+7 more)
ltests/: lester.lua  test.lua  test_collections.lua  test_decode.lua  test_encode.lua  test_json-schema.lua  test_json.lua  test_logger.lua  test_requests.lua  test_server.lua  test_sqlite.lua  test_uuid.lua
src/: app.rs  collections.rs  json.rs  json_rpc.rs  json_schema.rs  lib.rs  logger.rs  lua_json.rs  module_config.rs  requests.rs  sqlite.rs  uuid.rs  valico.rs  web.rs
src/json/: mod.rs
tstl/: .prettierrc  example.lua  example.ts  fmt.js  json.example.lua  json.example.ts  json.test.lua  json.test.ts  lester.d.ts  logger.example.lua  logger.example.ts  package-lock.json  package.json  script.http.js  script.http.results  test.lua  test.ts  tsconfig.e2e.json  tsconfig.json  tsconfig.tstl.json  typedoc.json  uuid.example.lua  uuid.example.ts  uuid.test.lua  uuid.test.ts
types/: pelican.collections.d.lua  pelican.d.lua  pelican.json.d.lua  pelican.jsonschema.d.lua  pelican.logger.d.lua  pelican.requests.d.lua  pelican.sqlite.d.lua  pelican.uuid.d.lua  pelican.web.d.lua
(+111 files in other folders)
