[package]
name = "lua-json-rpc"
version = "0.0.1"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua51", "module", "async", "serialize"] }
tokio = { version = "1.43.0", features = ["rt", "macros"] }
actix-web = "4.9.0"
actix-ws = "0.3.0"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4"] }
log = "0.4.25"
log4rs = "1.3.0"

[lib]
crate-type = ["cdylib"]
