[package]
name = "lua-json-rpc"
version = "0.0.2"
edition = "2021"

[dependencies]
mlua = { version = "0.10", features = ["lua51", "module", "async", "serialize"] }
tokio = { version = "1.43.0", features = ["rt", "macros"] }
actix-web = "4.9.0"
actix-ws = "0.3.0"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
log = "0.4.25"

[lib]
crate-type = ["cdylib"]
